creacion de las cartas en productos

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,10 +18,10 @@
             <a class="nav-link" routerLink="/nosotros">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/producto">Productos</a>
+            <a class="nav-link" routerLink="/producto">Perfumes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/ofertas">Ofertas</a>
+            <a class="nav-link" routerLink="/ofertas">Body splash</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/carrito">Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-dash" viewBox="0 0 16 16">
