--- a/src/app/pagina/producto/producto.component.html
+++ b/src/app/pagina/producto/producto.component.html
@@ -1,1 +1,12 @@
-<p>producto works!</p>
+<div class="card-container">
+  <div *ngFor="let producto of productos; let i = index">
+    <div class="card">
+      <img src="{{producto.img}}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{producto.nombre}}</h5>
+        <p class="card-text">{{producto.precio}}</p>
+        <a href="#" class="btn btn-primary">Comprar</a>
+      </div>
+    </div>
+  </div>
+</div>
