--- a/src/app/pagina/inicio/inicio.component.html
+++ b/src/app/pagina/inicio/inicio.component.html
@@ -1,1 +1,5 @@
-<p>inicio works!</p>
+
+      <div>
+        <img src="https://fearofgod.com/cdn/shop/files/05_1_x1400.jpg?v=1745435980" class="d-block w-100" alt="...">
+      </div>
+     
