productos de essentials

--- a/src/app/pagina/inicio/inicio.component.html
+++ b/src/app/pagina/inicio/inicio.component.html
@@ -1,5 +1,28 @@
+<head>
+ <title>Fear of God</title>
+</head>
+<body>
+ <header>FEAR OF GOD</header>
+ <div>
+ <img src="https://fearofgod.com/cdn/shop/files/05_1_x1400.jpg?v=1745435980"
+class="d-block w-100" alt="...">
+ </div>
+ <br><br>
+ <hr>
+ <section class="gallery">
+ <img src="https://fearofgod.com/cdn/shop/files/11_x1400.jpg?v=1727931506"
+alt="Look 1">
+ <img src="https://fearofgod.com/cdn/shop/files/04_x1400.jpg?v=1727931418"
+alt="Jeans">
+ <img src="https://fearofgod.com/cdn/shop/files/09_x1400.jpg?v=1727931472"
+alt="Look 2">
 
-      <div>
-        <img src="https://fearofgod.com/cdn/shop/files/05_1_x1400.jpg?v=1745435980" class="d-block w-100" alt="...">
-      </div>
-     
+ <img src="https://fearofgod.com/cdn/shop/files/ETERNAL2025LOOK27-3-
+4Crops_900x.jpg?v=1733877492" alt="Look 2">
+ <img src="https://fearofgod.com/cdn/shop/files/ETERNAL2025LOOK34-3-
+4Crops_900x.jpg?v=1740442253" alt="Look 2">
+ <img
+src="https://fearofgod.com/cdn/shop/files/LOOK_80_ETERNAL_SS25_LB_026_V1_900x.jpg
+?v=1733885173" alt="Look 2">
+ </section>
+</body>
