Conflictos resueltos en archivos de producto e inicio

--- a/src/app/pagina/ofertas/ofertas.component.html
+++ b/src/app/pagina/ofertas/ofertas.component.html
@@ -1,4 +1,6 @@
-<div class="card-container">
+
+<div class="fondo">
+  <div class="card-container">
   <div class="grid-container">
     <div *ngFor="let producto of productos; let i = index">
       <div class="card">
@@ -12,4 +14,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
