--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<div class="fondo"> 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -12,27 +13,27 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/inicio">Inicio</a>
+          <a class="nav-link active" aria-current="page" routerLink="/inicio">INICIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/producto">Feor of god</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/ofertas">Essentials</a>
+          <a class="nav-link" routerLink="/producto">FEOR OF GOD</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contacto">Contacto </a>
-        </li>
-        
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/nosotros">Nosotros</a>
+          <a class="nav-link" routerLink="/ofertas">ESSENTIALS</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/carrito">Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16"
-              height="16" fill="currentColor" class="bi bi-cart-dash" viewBox="0 0 16 16">
+          <a class="nav-link" routerLink="/contacto">CONTACTO </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/nosotros">NOSOTROS</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/carrito"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+              fill="currentColor" class="bi bi-cart-dash" viewBox="0 0 16 16">
               <path d="M6.5 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1z" />
               <path
                 d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zm3.915 10L3.102 4h10.796l-1.313 7zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
@@ -41,4 +42,18 @@
       </ul>
     </div>
   </div>
+ <!-- search --> 
+<div class="group">
+    <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
+        <g>
+            <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
+        </g>
+    </svg>
+    <input placeholder="Search" type="search" class="input">
+</div>
+
 </nav>
+
+
+
+</div>
