--- a/src/app/pagina/producto/producto.component.css
+++ b/src/app/pagina/producto/producto.component.css
@@ -1,5 +1,9 @@
+.fondo{
+  background-color: #f6f6f6;
+}
+
 body{
- background-color: #f3ebeb;
+ background-color: #f6f6f6;
  color: white;
  font-family:Arial;
 }
@@ -13,7 +17,7 @@ body{
  }
  .card{
  width: 18rem;
- background-color:rgb(255, 255, 255);
+ background-color:#f6f6f6;
  color: rgb(27, 2, 2);
  border-radius: 10px;
  overflow: hidden;
@@ -56,3 +60,42 @@ body{
  align-items: center;
  }
  }
+
+/*FLIP CARD - ADICIONAL*/
+.flip-img-container {
+  width: 100%;
+  height: 400px;
+  perspective: 1000px;
+}
+
+.flip-img-inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.card:hover .flip-img-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-img-front,
+.flip-img-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-img-front img,
+.flip-img-back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.flip-img-back {
+  transform: rotateY(180deg);
+}
+
