productos terminado-essentials

--- a/src/app/pagina/producto/producto.component.html
+++ b/src/app/pagina/producto/producto.component.html
@@ -15,23 +15,6 @@
   </div>
 </div>
 -->
-<!-- 
-<div class="card-container">
-  <div class="grid-container">
-    <div *ngFor="let producto of productos; let i = index">
-      <div class="card">
-        <img src="{{producto.img}}" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="title">{{producto.marca}}</h5>
-          <h5 class="card-title">{{producto.nombre}}</h5>
-          <p class="card-text">${{producto.precio}}</p>
-          <a href="#" class="btn btn-primary">Comprar</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
--->
  <div class="fondo"> 
 <div class="card-container">
   <div class="grid-container">
@@ -49,7 +32,7 @@
           </div>
         </div>
 
-        <!-- Cuerpo de la tarjeta -->
+        <!-- body -->
         <div class="card-body">
           <h5 class="title">{{producto.marca}}</h5>
           <h5 class="card-title">{{producto.nombre}}</h5>
