--- a/src/app/pagina/ofertas/ofertas.component.css
+++ b/src/app/pagina/ofertas/ofertas.component.css
@@ -61,3 +61,42 @@ body{
  align-items: center;
  }
  }
+
+ /*FLIP CARD - ADICIONAL*/
+.flip-img-container {
+  width: 100%;
+  height: 400px;
+  perspective: 1000px;
+}
+
+.flip-img-inner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.card:hover .flip-img-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-img-front,
+.flip-img-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-img-front img,
+.flip-img-back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.flip-img-back {
+  transform: rotateY(180deg);
+}
+
