--- a/src/app/pagina/ofertas/ofertas.component.html
+++ b/src/app/pagina/ofertas/ofertas.component.html
@@ -1,4 +1,6 @@
 <div class="fondo"> 
+ <header>ESSENTIALS</header>
+
 <div class="card-container">
   <div class="grid-container">
     <div *ngFor="let producto of productos; let i = index">
