--- a/src/app/pagina/producto/producto.component.html
+++ b/src/app/pagina/producto/producto.component.html
@@ -16,6 +16,8 @@
 </div>
 -->
  <div class="fondo"> 
+ <header>FEAR OF GOD</header>
+
 <div class="card-container">
   <div class="grid-container">
     <div *ngFor="let producto of productos; let i = index">
