--- a/src/app/pagina/nosotros/nosotros.component.html
+++ b/src/app/pagina/nosotros/nosotros.component.html
@@ -1,3 +1,10 @@
 <div class="fondo"> 
-<p>nosotros works!</p>
+     <header>WE ARE</header>
+<div>
+ <img src="https://fearofgod.com/cdn/shop/files/Desktopv2_x1400.jpg?v=1747248072"
+class="d-block w-100" alt="...">
+ </div>
+ <br><br>
+ <hr>
+
 </div>
