--- a/src/app/pagina/producto/producto.component.html
+++ b/src/app/pagina/producto/producto.component.html
@@ -15,31 +15,25 @@
   </div>
 </div>
 -->
- <div class="fondo"> 
- <header>FEAR OF GOD</header>
+<div class="fondo">
+  <header>FEAR OF GOD</header>
 
-<div class="card-container">
-  <div class="grid-container">
-    <div *ngFor="let producto of productos; let i = index">
-      <div class="card">
-        <!-- Imagen con efecto flip -->
-        <div class="flip-img-container">
-          <div class="flip-img-inner">
-            <div class="flip-img-front">
-              <img src="{{producto.img}}" alt="Imagen frente">
-            </div>
-            <div class="flip-img-back">
-              <img src="{{producto.imgBack}}" alt="Imagen reverso">
+  <div class="card-container">
+    <div class="grid-container">
+      <div *ngFor="let producto of productos; let i = index">
+        <div class="card">
+          <!-- Imagen con efecto flip -->
+          <div class="flip-img-container">
+            <div class="flip-img-inner">
+              <div class="flip-img-front">
+                <img src="{{producto.img}}" alt="Imagen frente">
+              </div>
+              <div class="flip-img-back">
+                <img src="{{producto.imgBack}}" alt="Imagen reverso">
+              </div>
+              <button (click)="agregarAlcarrito(producto)">Agregar al carrito</button>
             </div>
           </div>
-        </div>
-
-        <!-- body -->
-        <div class="card-body">
-          <h5 class="title">{{producto.marca}}</h5>
-          <h5 class="card-title">{{producto.nombre}}</h5>
-          <p class="card-text">${{producto.precio}}</p>
-         <button (click)="agregarAlCarrito(producto)">Agregar al carrito</button>
         </div>
       </div>
     </div>
@@ -47,4 +41,10 @@
 </div>
 </div>
 
-
+<!-- <div class="text-end mt-4" *ngIf="productosEnCarrito.length > 0">
+<h4 class="fw-bold" >Total: {{calcularTotal()}} </h4>
+<button class="btn btn-primary mt-2" (click)="irAFormularioCompra()">
+    <i class="bi bi-cart-check"></i> Realizar Compra
+</button>
+</div>
+-->
