--- a/src/app/pagina/inicio/inicio.component.html
+++ b/src/app/pagina/inicio/inicio.component.html
@@ -1,8 +1,10 @@
 <head>
- <title>Fear of God</title>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
- <header>FEAR OF GOD</header>
+ <header >FEAR OF GOD</header>
+
+
  <div>
  <img src="https://fearofgod.com/cdn/shop/files/05_1_x1400.jpg?v=1745435980"
 class="d-block w-100" alt="...">
