--- a/src/app/pagina/ofertas/ofertas.component.css
+++ b/src/app/pagina/ofertas/ofertas.component.css
@@ -3,11 +3,6 @@
   background-color: #f6f6f6 ;
 }
 
-body{
- background-color: #f3ebeb;
- color: #f6f6f6;
- font-family:Arial;
-}
  .card-container{
  display: flex;
  justify-content: center; /*centrar horizontalemente las tarjetas*/
@@ -100,10 +95,10 @@ body{
   transform: rotateY(180deg);
 }
 
- header {
+  header {
  text-align: center;
  padding: 40px 0 20px;
  font-size: 24px;
- letter-spacing: 3px;
- font-weight: bold;
+ letter-spacing: 1px;
+ font-family: 'Anton', sans-serif;
  }
