--- a/src/app/pagina/ofertas/ofertas.component.html
+++ b/src/app/pagina/ofertas/ofertas.component.html
@@ -1,31 +1,40 @@
-<div class="fondo"> 
- <header>ESSENTIALS</header>
+<div class="fondo">
+    <head><link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"></head>
+<body>
+  <header>ESSENTIALS</header>
 
-<div class="card-container">
-  <div class="grid-container">
-    <div *ngFor="let producto of productos; let i = index">
-      <div class="card">
-        <!-- Imagen con efecto flip -->
-        <div class="flip-img-container">
-          <div class="flip-img-inner">
-            <div class="flip-img-front">
-              <img src="{{producto.img}}" alt="Imagen frente">
-            </div>
-            <div class="flip-img-back">
-              <img src="{{producto.imgBack}}" alt="Imagen reverso">
+  <div class="card-container">
+    <div class="grid-container">
+      <div *ngFor="let producto of productos; let i = index">
+        <div class="card">
+          <!-- Imagen con efecto flip -->
+          <div class="flip-img-container">
+            <div class="flip-img-inner">
+              <div class="flip-img-front">
+                <img src="{{producto.img}}" alt="Imagen frente">
+              </div>
+              <div class="flip-img-back">
+                <img src="{{producto.imgBack}}" alt="Imagen reverso">
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- body -->
-        <div class="card-body">
-          <h5 class="title">{{producto.marca}}</h5>
-          <h5 class="card-title">{{producto.nombre}}</h5>
-          <p class="card-text">${{producto.precio}}</p>
-          <a href="#" class="btn btn-primary">Comprar</a>
+          <!-- body -->
+          <div class="card-body">
+            <h5 class="title">{{producto.marca}}</h5>
+            <h5 class="card-title">{{producto.nombre}}</h5>
+            <p class="card-text">${{producto.precio}}</p>
+            <a href="#" class="btn btn-primary">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3"
+                viewBox="0 0 16 16">
+                <path
+                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</body>
 </div>
