--- a/src/app/pagina/producto/producto.component.html
+++ b/src/app/pagina/producto/producto.component.html
@@ -16,7 +16,10 @@
 </div>
 -->
 <div class="fondo">
-  <header>FEAR OF GOD</header>
+  <head><link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"></head>
+<body>
+  
+ <header >FEAR OF GOD</header>
 
   <div class="card-container">
     <div class="grid-container">
@@ -31,14 +34,14 @@
               <div class="flip-img-back">
                 <img src="{{producto.imgBack}}" alt="Imagen reverso">
               </div>
-              <button (click)="agregarAlcarrito(producto)">Agregar al carrito</button>
+              <button (click)="agregarAlcarrito(producto)"> Agregar al carrito</button>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</body>
 </div>
 
 <!-- <div class="text-end mt-4" *ngIf="productosEnCarrito.length > 0">
