--- a/src/app/pagina/inicio/inicio.component.css
+++ b/src/app/pagina/inicio/inicio.component.css
@@ -2,17 +2,16 @@ body {
  margin: 0;
  /*font-family: 'Optima', sans-serif;
  font-size: 14px;*/
- font-family: 'Helvetica Neue', sans-serif;
  background-color: #f8f8f8;
- color: #111;
+  letter-spacing: 1px;
  }
 
  header {
  text-align: center;
  padding: 40px 0 20px;
  font-size: 24px;
- letter-spacing: 3px;
- font-weight: bold;
+ letter-spacing: 1px;
+ font-family: 'Anton', sans-serif;
  }
 
  .gallery {
@@ -34,6 +33,7 @@ body {
  flex-direction: column;
  align-items: center;
  }
+
 
  .gallery img {
  width: 90%;
