--- a/src/app/pagina/nosotros/nosotros.component.html
+++ b/src/app/pagina/nosotros/nosotros.component.html
@@ -1,15 +1,22 @@
 <div class="fondo">
-     <div class="header">
-          <p>WE ARE</p>
-     </div>
-     <div>
-          <img src="https://fearofgod.com/cdn/shop/files/Desktopv2_x1400.jpg?v=1747248072" class="d-block w-100"
-               alt="...">
-     </div>
-     <br><br>
-     <hr>
-     <div class="header">
-          <h1>FEAR OF GOD CELEBRATES THE DIGNITY OF DESIGN</h1>
 
-     </div>
+     <head>
+          <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+     </head>
+
+     <body>
+          <header>WE ARE</header>
+
+          <div>
+               <img src="https://fearofgod.com/cdn/shop/files/Desktopv2_x1400.jpg?v=1747248072" class="d-block w-100"
+                    alt="...">
+          </div>
+          <br><br>
+          <hr>
+      
+                <header>FEAR OF GOD CELEBRATES THE DIGNITY OF DESIGN</header>
+
+
+          
+     </body>
 </div>
