--- a/src/app/pagina/carrito/carrito.component.html
+++ b/src/app/pagina/carrito/carrito.component.html
@@ -1,38 +1,46 @@
-<div class="fondo"> 
-    <h1>carrito de compras</h1>
-<div *ngIf="productosEnCarrito.length===0">
-    <p>no hay productos en el carrito</p>
+<div class="fondo">
+    <header>Carrito de compras</header>
+    <div *ngIf="productosEnCarrito.length===0">
+        <header>No hay productos en el carrito </header>
 
-</div>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Imagen</th>
-            <th>Nombre</th>
-            <th>Descripicion</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Imagen</th>
+                <th>Nombre</th>
+                <th>Descripicion</th>
+                <th>Precio</th>
+                <th>Cantidad</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
 
-    <tbody>
-        <tr *ngFor="let item of productosEnCarrito; let i=index">
-            <td><img [src]="item.producto.img" alt="{{item.producto.nombre}}" style="width: 50px; height: 50px"></td>
-            <td>{{item.producto.nombre}}</td>
-            <td>{{item.producto.descripcion}}</td>
-            <td>{{item.producto.precio | currency}}</td>
-            <td>
-                <button (click)="quitarCantidad(i)">-</button>
-                {{item.cantidad}}
-                <button (click)="agregarCantidad(i)">+</button>
-            </td>
-            <td>
-                <button (click)="eliminarProducto(item.producto.id)" >eliminar</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<button (click)="realizarCompra()" class="btn btn-success">Realizar compras</button>
+        <tbody>
+            <tr *ngFor="let item of productosEnCarrito; let i=index">
+                <td><img [src]="item.producto.img" alt="{{item.producto.nombre}}" style="width: 50px; height: 50px">
+                </td>
+                <td>{{item.producto.nombre}}</td>
+                <td>{{item.producto.descripcion}}</td>
+                <td>{{item.producto.precio | currency}}</td>
+                <td>
+                    <button (click)="quitarCantidad(i)">-</button>
+                    {{item.cantidad}}
+                    <button (click)="agregarCantidad(i)">+</button>
+                </td>
+                <td>
+                    <button (click)="eliminarProducto(item.producto.id)">eliminar</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="text-end mt-4" *ngIf="productosEnCarrito.length > 0">
+        <h4 class="fw-bold">Total: {{calcularTotal()}} </h4>
+
+        <button class="btn btn-primary mt-2" (click)="irAFormularioCompra()">
+            <i class="bi bi-cart-check"></i> Realizar Compra
+        </button>
+    </div>
 
 </div>
