--- a/src/app/pagina/nosotros/nosotros.component.html
+++ b/src/app/pagina/nosotros/nosotros.component.html
@@ -13,10 +13,23 @@
           </div>
           <br><br>
           <hr>
-      
-                <header>FEAR OF GOD CELEBRATES THE DIGNITY OF DESIGN</header>
 
+          <header>FEAR OF GOD CELEBRATES THE DIGNITY OF DESIGN</header>
 
-          
+          <div class="text">
+               Este año, Fear of God encuentra una profunda alineación con la exposición del Instituto de Vestuario <br>
+               de Primavera de 2025 del Museo Metropolitano de Arte, “Superfine: Tailoring Black Style”,<br> una
+               exploración y celebración de la expresión negra a través de la excelencia sartorial.
+               <br> Fotografía de Roza Wiktoria Tyborowska.
+          </div>
+          <hr>
+          <section class="gallery">
+               <img src="https://fearofgod.com/cdn/shop/files/7_d132faba-2544-4d29-993c-635c710c77e5.jpg?v=1747162089&width=1440"
+                    alt="Look 1">
+               <p>Para mí, el poder de la autorrealización significa poder operar al máximo de mi capacidad, porque me
+                    conozco bien. La autorrealización es, igualmente, lo que se requiere para darte el espacio para
+                    crecer, así como para lo que sea que te conviertas en ese espacio.</p>
+          </section>
+
      </body>
 </div>
