--- a/src/app/pagina/compra/compra.component.html
+++ b/src/app/pagina/compra/compra.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center btn"> formulario de compras</h2>
+<header> Formulario de compras</header>
 <form [formGroup]="formularioCompra" (ngSubmit)="finalizarCompra()" class="mx-auto" style="max-width:600px;">
     <!--Campos del formulario-->
     <div class="row g-3 mb-3"></div>
