--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+
+<app-navbar></app-navbar>       <!-- Muestra la barra -->
+<router-outlet></router-outlet> <!-- Es una directiva especial de Angular Router.Muestra el componente de la ruta actual (contenido dinámico) -->
+<app-footer></app-footer>       <!-- Muestra el footer -->
+
