--- a/src/app/pagina/carrito/carrito.component.html
+++ b/src/app/pagina/carrito/carrito.component.html
@@ -24,12 +24,12 @@
                 <td>{{item.producto.descripcion}}</td>
                 <td>{{item.producto.precio | currency}}</td>
                 <td>
-                    <button (click)="quitarCantidad(i)">-</button>
+                    <button class="neu-button"  (click)="quitarCantidad(i)">-</button>
                     {{item.cantidad}}
-                    <button (click)="agregarCantidad(i)">+</button>
+                    <button class="neu-button" (click)="agregarCantidad(i)">+</button>
                 </td>
                 <td>
-                    <button (click)="eliminarProducto(item.producto.id)">eliminar</button>
+                    <button class="neu-button" (click)="eliminarProducto(item.producto.id)">Eliminar</button>
                 </td>
             </tr>
         </tbody>
@@ -38,7 +38,7 @@
     <div class="text-end mt-4" *ngIf="productosEnCarrito.length > 0">
         <h4 class="fw-bold">Total: {{calcularTotal()}} </h4>
 
-        <button class="btn btn-primary mt-2" (click)="irAFormularioCompra()">
+        <button class="btn btn-primary mt-2" class="neu-button" (click)="irAFormularioCompra()">
             <i class="bi bi-cart-check"></i> Realizar Compra
         </button>
     </div>
