--- a/src/app/pagina/favoritos/favoritos.component.css
+++ b/src/app/pagina/favoritos/favoritos.component.css
@@ -9,3 +9,24 @@ header {
  letter-spacing: 1px;
  font-family: 'Anton', sans-serif;
  }
+ /*Botones*/
+ .neu-button {
+  background-color: #e0e0e0;
+  border-radius: 30px;
+  box-shadow: inset 4px 4px 10px #bcbcbc, inset -4px -4px 10px #ffffff;
+  color: #4d4d4d;
+  cursor: pointer;
+  font-size: 12px;
+  padding:   7px 9px; /*ancho y alto*/
+  transition: all 0.2s ease-in-out;
+  border: 2px solid rgb(206, 206, 206);
+}
+
+.neu-button:hover {
+  box-shadow: inset 2px 2px 5px #bcbcbc, inset -2px -2px 5px #ffffff, 2px 2px 5px #bcbcbc, -2px -2px 5px #ffffff;
+}
+
+.neu-button:focus {
+  outline: none;
+  box-shadow: inset 2px 2px 5px #bcbcbc, inset -2px -2px 5px #ffffff, 2px 2px 5px #bcbcbc, -2px -2px 5px #ffffff;
+}
