--- a/src/app/pagina/ofertas/ofertas.component.html
+++ b/src/app/pagina/ofertas/ofertas.component.html
@@ -1,45 +1,49 @@
 <div class="fondo">
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
-  
-    <header>ESSENTIALS</header>
 
-    <div class="card-container">
-      <div class="grid-container">
-        <div *ngFor="let producto of productos; let i = index">
-          <div class="card">
-            <!-- Imagen con efecto flip -->
-            <div class="flip-img-container">
-              <div class="flip-img-inner">
-                <div class="flip-img-front">
-                  <img src="{{producto.img}}" alt="Imagen frente">
-                </div>
-                <div class="flip-img-back">
-                  <img src="{{producto.imgBack}}" alt="Imagen reverso">
-                </div>
+  <header>ESSENTIALS</header>
+
+  <div class="card-container">
+    <div class="grid-container">
+      <div *ngFor="let producto of productos; let i = index">
+        <div class="card">
+          <!-- Imagen con efecto flip -->
+          <div class="flip-img-container">
+            <div class="flip-img-inner">
+              <div class="flip-img-front">
+                <img src="{{producto.img}}" alt="Imagen frente">
+              </div>
+              <div class="flip-img-back">
+                <img src="{{producto.imgBack}}" alt="Imagen reverso">
               </div>
             </div>
+          </div>
 
-            <!-- body -->
-            <div class="card-body">
-              <h5 class="title">{{producto.marca}}</h5>
-              <h5 class="card-title">{{producto.nombre}}</h5>
-              <p class="card-text">${{producto.precio}}</p>
-               <button (click)=" agregarAlcarrito(producto)"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+          <!-- body -->
+          <div class="card-body">
+            <h5 class="title">{{producto.marca}}</h5>
+            <h5 class="card-title">{{producto.nombre}}</h5>
+            <p class="card-text">${{producto.precio}}</p>
+
+
+            <button class="neu-button" (click)=" agregarAlcarrito(producto)"> <svg xmlns="http://www.w3.org/2000/svg"
+                width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                 <path
                   d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
               </svg>
             </button>
 
-            <button (click)=" agregarr(producto)"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1M8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132"/>
-</svg></button>
+            <button class="neu-button" (click)=" agregarr(producto)"> <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                height="16" fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1M8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132" />
+              </svg></button>
 
-            </div>
           </div>
         </div>
       </div>
     </div>
-  
+  </div>
+
 </div>
