--- a/src/app/pagina/nosotros/nosotros.component.html
+++ b/src/app/pagina/nosotros/nosotros.component.html
@@ -23,13 +23,43 @@
                <br> Fotografía de Roza Wiktoria Tyborowska.
           </div>
           <hr>
-          <section class="gallery">
-               <img src="https://fearofgod.com/cdn/shop/files/7_d132faba-2544-4d29-993c-635c710c77e5.jpg?v=1747162089&width=1440"
-                    alt="Look 1">
-               <p>Para mí, el poder de la autorrealización significa poder operar al máximo de mi capacidad, porque me
-                    conozco bien. La autorrealización es, igualmente, lo que se requiere para darte el espacio para
-                    crecer, así como para lo que sea que te conviertas en ese espacio.</p>
+
+
+          <section class="intro">
+               <div class="intro-img">
+                    <img src="img1.jpg" alt="Colección 8">
+               </div>
+               <div class="intro-text">
+                    <h2>COLECCIÓN 8</h2>
+                    <p>Fear of God presenta la llegada de la Colección 8, que debutó la primavera pasada en el primer
+                         desfile de la casa en el Hollywood Bowl.</p>
+               </div>
           </section>
+
+          <section class="gallery">
+               <img src="img2.jpg" alt="Look 1">
+               <img src="img3.jpg" alt="Look 2">
+          </section>
+
+          <section class="description">
+               <p>
+                    La colección 8 encarna y refuerza la perspectiva de Fear of God sobre el lujo estadounidense a
+                    través de prendas atemporales y elegantes.
+               </p>
+          </section>
+
+          <section class="triple-gallery">
+               <img src="img4.jpg" alt="Look 3">
+               <div class="middle-text">
+                    <p>
+                         Derivada de una sutil mezcla de influencias que abrazan las experiencias de la perspectiva y el
+                         viaje individual, la oferta extiende el lenguaje de diseño de la casa a través de disposiciones
+                         textiles y proporciones arquitectónicas.
+                    </p>
+               </div>
+               <img src="img5.jpg" alt="Look 4">
+          </section>
+
 
      </body>
 </div>
