--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-
+body{
+    transition: all 1.5s ease;
+}
+#toggle{
+    display: none;
+}
+#label_toggle{
+    position: static;
+    cursor:pointer
+}
+.dark{
+    background-color: black;
+    color: aliceblue;
+    transition: all 1.5s ease;
+}
